force-app/main/default/objects/Pending_Job__c/Pending_Job__c.object-meta.xml
<CustomObject>
    <label>Pending Job</label>
    <nameField>
        <label>Pending Job Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pending Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>