force-app/main/default/objects/Pending_Job__c/fields/Linked_Entity_Id__c.field-meta.xml
<CustomField>
    <fullName>Linked_Entity_Id__c</fullName>
    <label>Linked Entity Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>