force-app/main/default/objects/Pending_Job__c/fields/sObject__c.field-meta.xml
<CustomField>
    <fullName>sObject__c</fullName>
    <label>sObject</label>
    <length>25</length>
    <type>Text</type>
</CustomField>